--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="horizontal"
+    android:gravity="center"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <org.idoroiengel.expensescalculator.ui.component.MainLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:id="@+id/main_activity_incomes_layout"
+        android:layout_weight="1"
+        android:background="@color/primary_palette_color"
+        >
 
-</android.support.constraint.ConstraintLayout>
+    </org.idoroiengel.expensescalculator.ui.component.MainLayout>
+
+    <org.idoroiengel.expensescalculator.ui.component.MainLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:id="@+id/main_activity_expenses_layout"
+        android:layout_weight="1"
+        android:background="@color/secondary_palette_color"
+        >
+
+    </org.idoroiengel.expensescalculator.ui.component.MainLayout>
+
+
+
+</LinearLayout>
