- added LayoutType enum for MainLayout. - removed TextAndValueLayout member from MainLayout in favor of simple TextView for title. - added styled attribute for list type in xml. - added english string resources.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -14,6 +14,8 @@
         android:id="@+id/main_activity_incomes_layout"
         android:layout_weight="1"
         android:background="@color/primary_palette_color"
+        custom:main_layout_type="incomes"
+
         >
 
     </org.idoroiengel.expensescalculator.ui.component.MainLayout>
@@ -24,6 +26,7 @@
         android:id="@+id/main_activity_expenses_layout"
         android:layout_weight="1"
         android:background="@color/secondary_palette_color"
+        custom:main_layout_type="expenses"
         >
 
     </org.idoroiengel.expensescalculator.ui.component.MainLayout>
