--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout_root_view"
     android:padding="20dp"
@@ -9,12 +8,13 @@
 
 
 
-    <org.idoroiengel.expensescalculator.ui.component.TextAndValueLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/main_layout_title"
-        android:background="@color/quaternary_palette_color">
-
-    </org.idoroiengel.expensescalculator.ui.component.TextAndValueLayout>
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/main_layout_title"
+       android:clickable="false"
+       android:focusable="false"
+       android:gravity="start"
+       />
 
 </LinearLayout>
