--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:gravity="center"
-    >
+    android:orientation="vertical"
+    android:gravity="center">
+<ScrollView
+
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+
+    <LinearLayout
+        android:baselineAligned="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <org.idoroiengel.expensescalculator.ui.component.MainLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:id="@+id/main_activity_incomes_layout"
         android:layout_weight="1"
-        android:background="@color/primary_palette_color"
         custom:main_layout_type="incomes"
 
         >
-
     </org.idoroiengel.expensescalculator.ui.component.MainLayout>
 
     <org.idoroiengel.expensescalculator.ui.component.MainLayout
+        android:id="@+id/main_activity_expenses_layout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:id="@+id/main_activity_expenses_layout"
         android:layout_weight="1"
-        android:background="@color/secondary_palette_color"
-        custom:main_layout_type="expenses"
-        >
+        custom:main_layout_type="expenses">
 
     </org.idoroiengel.expensescalculator.ui.component.MainLayout>
+    </LinearLayout>
+</ScrollView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:elevation="2dp"
+        android:background="@drawable/top_shadow_effect"
+        />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:minHeight="70dp"
+        android:id="@+id/main_activity_static_layout"
+        >
 
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:text="@string/app_name"
+            />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
