--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout_root_view"
-    android:padding="20dp"
-    android:background="@color/tertiary_palette_color">
-
+    android:padding="8dp"
+    android:orientation="vertical">
 
 
    <TextView
-       android:layout_width="wrap_content"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:minHeight="40dp"
        android:id="@+id/main_layout_title"
        android:clickable="false"
        android:focusable="false"
-       android:gravity="start"
+       android:gravity="center"
+       android:layout_marginTop="20dp"
+       />
+
+   <org.idoroiengel.expensescalculator.ui.component.TextAndValueLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       >
+
+   </org.idoroiengel.expensescalculator.ui.component.TextAndValueLayout>
+
+   <android.support.v7.widget.AppCompatButton
+       android:layout_width="50dp"
+       android:layout_height="50dp"
+       android:id="@+id/main_layout_add_item_button"
+       android:layout_gravity="bottom|center"
+       android:background="@drawable/round_button"
+       android:layout_marginTop="20dp"
        />
 
 </LinearLayout>
