- added summation data for income and expense. - added UI components for income and expense display. - added const value for log tag for debugging. - refactored names of fields in MainLayout, activity_main.xml. - simplified data structures in MainLayout. - added getter methods in TextAndValueLayout including try/catch behavior. - added hint values for text_and_value_layout.xml.

--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -19,12 +19,22 @@
        android:layout_marginTop="20dp"
        />
 
+   <LinearLayout
+       android:orientation="vertical"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/main_layout_text_and_value_layout_layout"
+       >
+
    <org.idoroiengel.expensescalculator.ui.component.TextAndValueLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:id="@+id/main_layout_initial_text_and_value_layout"
        >
 
    </org.idoroiengel.expensescalculator.ui.component.TextAndValueLayout>
+
+   </LinearLayout>
 
    <android.support.v7.widget.AppCompatButton
        android:layout_width="50dp"
