--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     <org.idoroiengel.expensescalculator.ui.component.MainLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:id="@+id/main_activity_incomes_layout"
+        android:id="@+id/activity_main_incomes_layout"
         android:layout_weight="1"
         custom:main_layout_type="incomes"
 
@@ -26,7 +26,7 @@
     </org.idoroiengel.expensescalculator.ui.component.MainLayout>
 
     <org.idoroiengel.expensescalculator.ui.component.MainLayout
-        android:id="@+id/main_activity_expenses_layout"
+        android:id="@+id/activity_main_expenses_layout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -46,14 +46,15 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:minHeight="70dp"
-        android:id="@+id/main_activity_static_layout"
+        android:id="@+id/activity_main_static_layout"
         >
 
-        <android.support.v7.widget.AppCompatTextView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:text="@string/app_name"
+            android:id="@+id/activity_main_sum_text_view"
+            android:padding="4dp"
             />
 
 
